# abiogenesis

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
abiogenesis/: Cargo.toml
abiogenesis/assets/shaders/: compute_shader.wgsl  particle_render.wgsl
abiogenesis/assets/shaders/utils/: colours.wgsl  math.wgsl
abiogenesis/src/: browser_state.rs  bundle_fn.rs  camera.rs  compute_shader.rs  controls.rs  main.rs  math.rs  observe.rs  particles.rs  render_particles.rs  scenes.rs  spatial_hash.rs  systems.rs  ui.rs
abiogenesis/src/particles/: colour.rs  decay.rs  model.rs  particle.rs  simulation.rs  size.rs  spatial_index.rs  spawner.rs
abiogenesis/src/ui/: button.rs  camera_controls.rs  challenges.rs  colours.rs  dropdown.rs  examples.rs  icon.rs  lenses.rs  menu_button.rs  mixins.rs  model_matrix.rs  parameters.rs  randomise_button.rs  reset_button.rs  slider.rs  title_screen.rs  toolbar.rs  tooltip.rs
abiogenesis/src/ui/mixins/: block_all_interactions.rs  cursor_grab_icon.rs  hover_colour.rs  tooltip.rs
abiogenesis/src/ui/model_matrix/: circle.rs  model_box.rs  num_colours.rs
site/: .gitignore  assets  index.html
