[package]
name = "abiogenesis"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_log",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_ui_picking_backend",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "multi_threaded",
  "png",
  "std",
  "webgl2",
] }
rand = "0.8"
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
bevy_simple_subsecond_system = { optional = true, git = "https://github.com/TheBevyFlock/bevy_simple_subsecond_system" }
bevy-inspector-egui = { version = "0.31.0", optional = true }
bevy_tweening = { version = "0.13.0", default-features = false, features = [
  "bevy_ui",
] }
itertools = "0.14.0"
rand_distr = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.100" }
serde-wasm-bindgen = { version = "0.6.5" }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[features]
default = ["dev_native"]
dev_native = ["hot_reload", "egui"]
egui = ["dep:bevy-inspector-egui"]
debug_ui = ["bevy/bevy_ui_debug"]
hot_reload = ["dep:bevy_simple_subsecond_system"]
